# En2Ja

./: .gitignore  CMakeLists.txt  En2Ja.bat  En2Ja.sln  En2JaWord.cpp  En2JaWord.vcxproj  En2JaWord.vcxproj.filters  README.md
Release/: En2Ja.exe.recipe  En2Ja.iobj  En2Ja.ipdb  En2JaWord.vcxproj.FileListAbsolute.txt
Release/En2Ja.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  En2Ja.lastbuildstate  En2Ja.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: En2JaWord.cpp
